# b2b-marketing

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  implementation_plan.md  start.sh  stop.sh  test.sh
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements-test.txt  start-backend.sh
backend/alembic/: env.py
backend/alembic/versions/: 53ca59794416_make_journey_name_unique.py  7e524bc56427_add_leads_table.py
backend/app/: config.py  database.py  main.py
backend/app/db/: deduplicate_journeys.py  seed_complex_journey.py  seed_leads.py
backend/app/middleware/: auth.py  rbac.py
backend/app/models/: __init__.py  audit_log.py  journey.py  lead.py  persona.py  stage.py  user.py
backend/app/routers/: ai.py  analytics.py  auth.py  export.py  journeys.py  leads.py  personas.py  websocket.py
backend/app/schemas/: __init__.py  common.py  journey.py  lead.py  persona.py  stage.py  user.py
backend/app/services/: agent_service.py  ai_service.py  auth_service.py  collaboration_service.py  export_service.py  journey_service.py  lead_service.py  persona_service.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_ai_agent.py  test_auth.py  test_journeys.py  test_leads.py  test_personas.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: authStore.ts  journeyStore.ts  personaStore.ts
frontend/src/types/: journey.ts  lead.ts  user.ts
frontend/tests/: setup.ts
(+28 files in other folders)
