[project]
name = "journeyforge-backend"
version = "0.1.0"
description = "Enterprise B2B Customer Journey Mapping API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiomysql>=0.2.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.17",
    "google-generativeai>=0.8.0",
    "reportlab>=4.2.0",
    "Pillow>=11.0.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
